# setup.cfg from https://github.com/snstac/aiscot
# Setup config for AISCOT: AIS to TAK Gateway - Display Ships in TAK.
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = aiscot
version = file: src/aiscot/VERSION
url = https://github.com/snstac/aiscot
project_urls =
  CI: GitHub Actions = https://github.com/snstac/aiscot/actions
  GitHub: issues = https://github.com/snstac/aiscot/issues
  GitHub: repo = https://github.com/snstac/aiscot
description = Software for monitoring and analyzing AIS in TAK.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Greg Albrecht <oss@undef.net>
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
authors = 
  { name="Greg Albrecht", email="oss@undef.net" }
requires_python = ">=3.7"
include_package_data = True
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords =
  Cursor on Target
  Cursor-on-Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK
  TAK Server
  iTAK
  AIS
  Boats
  Marine
  Sailing
  Ships
  Shipping

[options]
packages = find_namespace:
package_dir = 
  = src
include_package_data = True
python_requires = >=3.6, <4
install_requires = 
  pytak >= 5.4.0
  aiohttp < 4.0.0
  importlib_resources; python_version < "3.9"

[options.packages.find]
where = src

[options.package_data]
# Include all files in the package
aiscot.data = 
  *.csv
  *.txt
    
[options.entry_points]
console_scripts =
    aiscot = aiscot.commands:main

[options.extras_require]
with_takproto = takproto >= 2.0.0
test = 
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
  pytak

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
